# email-newbie

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/mailserver/config/: dovecot.cf  postfix-accounts.cf  postfix-main.cf
src/: email.py  imap.py  smtp.py  test_email.py  test_imap.py  test_smtp.py
src/testdata/: textfile.txt
